--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,11 @@ install(TARGETS ifb_driver_node
 
 ament_target_dependencies(ifb_driver_node rclcpp std_msgs geometry_msgs Boost autoware_auto_vehicle_msgs autoware_auto_control_msgs)  
 
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
