--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,11 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>autoware_auto_vehicle_msgs</depend>
+  <depend>autoware_auto_control_msgs</depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
   <test_depend>boost</test_depend>
@@ -16,4 +21,5 @@
   <export>
     <build_type>ament_cmake</build_type>
   </export>
+
 </package>
